2011-02-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/include/rtems/bdpart.h (rtems_bdpart_format):
	Preserve previous API.
	* libblock/src/bdpart-create.c, libblock/src/bdpart-read.c,
	libblock/src/bdpart-write.c: Reflect changes above.
	* libmisc/shell/fdisk.c: Reflect changes above.

2011-02-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/rtems_heap_extend.c: New file.
	* libcsupport/Makefile.am: Reflect change from above.
	* libcsupport/include/rtems/malloc.h: Declare rtems_heap_extend().
	* score/include/rtems/score/heap.h: Documentation.

2011-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/wkspace.c: Removed NULL pointer check from
	_Workspace_Free().

2011-02-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libmisc/capture/capture.c, posix/src/keyfreememory.c,
	posix/src/pthread.c, score/include/rtems/score/wkspace.h,
	score/src/objectextendinformation.c,
	score/src/objectnamespaceremove.c, score/src/objectsetname.c,
	score/src/threadclose.c, score/src/threadinitialize.c,
	score/src/wkspace.c: Many places were checking for a NULL pointer
	before calling _Workspace_Free. By moving the check into
	_Workspace_Free, we eliminate a number of conditional paths and make
	it harder to return a NULL pointer.

2011-02-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/semtranslatereturncode.c,
	score/include/rtems/score/coremutex.h: Returns tests to running
	state.

2011-02-14	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* rtems/src/semtranslatereturncode.c, score/src/coremutexsurrender.c:
	Now all conditionals have the correct sense and all tests pass.

2011-02-14	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* score/include/rtems/score/coremutex.h,
	score/inline/rtems/score/coremutex.inl, score/src/apimutexallocate.c:
	Fix direction of conditional and eliminate use of nesting is error
	when POSIX is disabled.

2011-02-11	Joel Sherrill <joel.sherrilL@OARcorp.com>
