@@ -1,3 +1,9 @@
+2011-02-17	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* libmisc/Makefile.am, libmisc/fb/mw_uid.c, libmisc/fb/mw_uid.h: Clean
+	up. Add Doxygen style comments. Add method to print uid structure.
+	* libmisc/fb/mw_print.c: New file.
+
 2011-02-17	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* libblock/include/rtems/bdpart.h (rtems_bdpart_format):
